Setting decimal value in Rotation angle step in User Preferences results in rounding #45032

Closed
opened 2015-06-11 17:37:54 +02:00 by Adam Preisler · 6 comments

System Information
Irrelevant

Blender Version
2.74 000dfc0

Short description of error
This is a special case I am needing this for - lots of editing on 63.422 degree triangle, so I want to set the angle to 15.855, however I don't see a reason why it should round up when it isn't necessary, since computers work in binary anyway.

Exact steps for others to reproduce the error
Press Ctrl+Alt+U, go into Interfrace, set a decimal value into Rotation Angle -> it gets rounded up

**System Information** Irrelevant **Blender Version** 2.74 000dfc0 **Short description of error** This is a special case I am needing this for - lots of editing on 63.422 degree triangle, so I want to set the angle to 15.855, however I don't see a reason why it should round up when it isn't necessary, since computers work in binary anyway. **Exact steps for others to reproduce the error** Press Ctrl+Alt+U, go into Interfrace, set a decimal value into Rotation Angle -> it gets rounded up
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Well, there -is- a reason and the reason is that this is stored as an integer ;)

No need to not use a float though

Well, there -is- a reason and the reason is that this is stored as an integer ;) No need to not use a float though
Antonis Ryakiotakis self-assigned this 2015-06-11 18:07:45 +02:00

This issue was referenced by 8c2619a11a

This issue was referenced by 8c2619a11a155ecd8c331eb383a9c0749bb965ab

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45032
No description provided.