Fix T45032 allow float rotational values for numpad rotation